--- a/STAT/documentation.tex
+++ b/STAT/documentation.tex
@@ -74,7 +74,7 @@ The following requires the R,Python and several R packages. A functional R serve
 \includegraphics[scale=0.8]{outputimage}
 \end{center}
 
-
-
+\section{Conclusion}
+More statistic analysis will be included in the future, for example, Silhouette Plot function need to calculate clusters first,so it is necessary to get access to other faster computers.Furthermore,Algorithms for some of the code can be improved, I can foresee that my multigraph permutation code will run very slow when dealing with large amount of data. 
 
 \end{document}
